k8s/istio/istio-specs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpsserver
spec:
  gateways:
  - httpsserver
  hosts:
    - "*"
          #- httpsserver.svc.cluster.local
  http:
    - name: "default httpserver"
      match:
      - uri:
         prefix: /test/
      - uri:
         prefix: /test
      rewrite:
        uri: "/"
      route:
        - destination:
            host: httpserver.default.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpsserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*"
          #- httpsserver.svc.cluster.local
      port:
        name: http-default
        number: 80
        protocol: HTTP
